mds: wait the preivous unlink and the later linkmerge to finish

If one inode has more than one link and after one dentry being
unlinked it will be moved to stray directory. Before the linkmerge
finises if a link request comes it will fail with -EXDEV.

Just wait the linkmerge to finish.

https://tracker.ceph.com/issues/56695
Signed-off-by: Xiubo Li <xiubli@redhat.com>