src/mds/Server.cc
@@ -7213,6 +7213,13 @@ void Server::handle_client_link(MDRequestRef& mdr)
   if (target_pin != dir->inode &&
       target_realm->get_subvolume_ino() !=
       dir->inode->find_snaprealm()->get_subvolume_ino()) {
+    if (target_pin->is_stray()) {
+      mds->locker->drop_locks(mdr.get());
+      targeti->add_waiter(CInode::WAIT_UNLINK,
+                          new C_MDS_RetryRequest(mdcache, mdr));
+      mdlog->flush();
+      return;
+    }
     dout(7) << "target is in different subvolume, failing..." << dendl;
     respond_to_request(mdr, -CEPHFS_EXDEV);
     return;
@@ -9535,6 +9542,13 @@ void Server::_rename_prepare(MDRequestRef& mdr,
   if (srci->is_dir())
     mdcache->project_subtree_rename(srci, srcdn->get_dir(), destdn->get_dir());
 
+  // After the stray dn linkmerged in case of reintegrate_stray we can
+  // wake up the waitiers.
+  if (linkmerge) {
+    MDSContext::vec finished;
+    srci->take_waiting(CInode::WAIT_UNLINK, finished);
+    mds->queue_waiters(finished);
+  }
 }
 
 
@@ -9627,6 +9641,14 @@ void Server::_rename_apply(MDRequestRef& mdr, CDentry *srcdn, CDentry *destdn, C
   }
 
   srcdn->get_dir()->unlink_inode(srcdn);
+
+  // After the stray dn unlinked in case of migrate_stray we can
+  // wake up the waitiers.
+  MDSContext::vec finished;
+  srci->take_waiting(CInode::WAIT_UNLINK, finished);
+  if (!finished.empty()) {
+    mds->queue_waiters(finished);
+  }
 
   // dest
   if (srcdn_was_remote) {
